index.css
@font-face {
    font-family: NettoOT;
    src: url("../design/NettoOT.otf");
}


body{
    /* display:flex; */
    margin: 0;
    padding: 0;
    max-width: 100%;
    font-family: 'NettoOT';
    overflow-x: hidden;
    position: relative;
}

.titel-container{
    display: flex;
    align-items: center;
    justify-content: center;
    background-color:#2490D6;
    height: 10vh;
    margin: 0;
    padding: 0;
}
.navbar{
    display: flex;
    width: 100vw;
    max-width: 100vw;
    flex-wrap: wrap;
    align-items: center;
    /* border-bottom: 0.3vh solid white; */
    height: 7vh;
    margin: 0;
    background-color:#2490D6;
    border-bottom: 0.25vh solid white;
}

.navbar li{
    list-style-type: none;
    display: inline;
}

.navbar a{
    text-decoration: none;
    color: white;
    margin-left: 1vw;
    transition: all 0.2s ease-in-out;
    font-size: 1rem;
}

.navbar a:hover{
    text-decoration: none;
    border-bottom: 0.3vh solid #f0e912;
    transition: all 0.2s ease-in-out;
}

.navbar img{
    margin-right: 2vw;
    height: 5vh;
    width: auto;
    
}

h1{
    color: white;
    font-weight: 400;
    margin-left: 2vw;
    transition: all 1s ease-in-out;
} 

h1:hover{
    color:#E8EB0C;
    transition: all 1s ease-in-out;
}

.IT-Consultancy-row{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
   height: 50vh;
   width: 100vw;
}

#logo1{

}

#IC_C1{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 40vw;
    height: 40vh;
}

#IC_C1 img{
    width: auto;
    height: 30vh;
    margin: 0;
    padding: 0;
}
#IC_C2{
    width: 40vw;
    height: 40vh;
}
p{
    color: #6B6B6B;
    max-width: 30vw;
    margin-left: 5vw;
}

#IC_C2 a{
    display: block;
    width: fit-content;
    border:0.15rem solid #2490D6;
    padding: 0.3rem 1rem;
    text-decoration: none;
    color: #2490D6;
    margin-left: 5vw;
    margin-top: 5vh;
    transition: all 0.3s ease-in-out;
}

#IC_C2 a:hover{
    color: #E8EB0C;
    border:0.15rem solid #E8EB0C;
    transition: all 0.3s ease-in-out;
}
h2{
    color: #2490D6;
    font-weight: 500;
}
#IC_C2 h2{
    margin-left: 5vw;
}
#IC_C2 h2:hover{
    width: fit-content;
    border-bottom: 0.1rem solid #E8EB0C;
}
.Services-row{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap:wrap;
    background-color:#2490D6;
    height: 50vh;
    width: 100vw;
}

.S_C1{
    width: 40vw;
    height: 30vh;
    text-align: center;
}

.S_C1 h2{
    margin: auto;
    color: white;
    border-bottom: 0.1rem solid #E8EB0C;
    width: fit-content
}

.S_C1 p{
    margin-left: auto;
    margin-right: auto;
    color: white;
}

.button{
    display: block;
    border-radius: 5px;
    border: 0.15rem solid white;
    width: fit-content;
    text-decoration: none;
    color: white;
    padding: 0.3rem 1rem;
    margin: 0.5rem;
    font-weight: 400;
    transition: all 0.3s ease-in-out;
}

#linkseButton{
    /* margin-left: 5vw; */
}
.button:hover{
    border: 0.15rem solid #E8EB0C;
    color: #E8EB0C;
    transition: all 0.3s ease-in-out;
}


.container{
    margin-top: 5vh;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.S_C2{
    width: 40vw;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    height: 30vh;
}
    
.S_C2 img{
        height: 30vh;
        width: auto;
    }

.ROW3{
    align-items: center;
    justify-content: center;
    display: flex;
    height: 50vh;
}

.ROW3_C1{
    height:30vh;
    width: 40vw;
    display: flex;
    align-items: center;
    justify-content: center;
}

.ROW3_C2 h2{
    margin-left: 5vw;
}

.ROW3_C1 img{
    height: 35vh;
    width: auto;
}

.ROW_C2{
    height: 30vh;
    width: 40vw;
}

.footer{
    background-color:#2490D6 ;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
}

.footer img{
    margin-left: 5vw;
    height: 5vh;
    width: auto;
}

.footer p{
    color: white;
}

.leftAligned{
    width: 50vw;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex-wrap: wrap;
}
.rightAligned{
    display: flex;
    width: 40vw;
    align-items: center;
    justify-content: flex-end;
}
#bars{
display: none;
 margin-left: auto;   
}

/** RESPONSIVE CSS **/ 

@media screen and (max-width: 800px) {
    .body{
        max-width: 100vw;
    }
    #IC_C1{
        width: 100vw;
    }
    #IC_C2{
        width: 100vw;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        height: calc(fit-content+3vh);
        text-align: center;
    }

    h2{
        width: 100vw;
        margin: 0;
        padding: 0;
    }
    #linkseButton{
        margin-left: auto;
        margin-bottom: 2vh;
    }

    p{
        width: 75vw;
        max-width: 100vw;
        margin: 0;
        padding: 0;
    }
    .IT-Consultancy-row{
        height: fit-content;
    }

    .Services-row{
        height: fit-content;
    }
    .S_C1{
        width: 100vw;
        text-align: center;
    }
    .button{
        width: 51vw;
        margin-left: auto;
        margin-right: auto;
    }

    #ontdek{
        min-width: 70vw;
    }
    .S_C1 h2{
    margin-top: 5vh;
    margin-left: auto;
    margin-right: auto;
     border-bottom: none;
    }
    .S_C1 p{
        margin-left: auto;
        margin-right: auto;
        margin-top: 3vh;
    }
    .S_C2{
        margin-top: 10vh;
        width: 100vw;
        height: 60vh;
    }

    .ROW3{
        height: fit-content;
        flex-wrap: wrap;
        justify-content: center;
        text-align: center;
    }
    .ROW3_C2{
        margin-bottom: 5vh;
    }
    .ROW3_C2 p{
        margin-left: auto;
        margin-right: auto;
        margin-top: 3vh;
    }

    #bars{
        display: inherit;
        margin-right: 5vw;
    }

    .leftAligned li{
        display: none;
    }

    .footer p{
        font-size: 0.75rem;
    }

    .responsiveImg{
        width: 50vw;
        height: auto;
        margin: 1rem;
    }
}

